<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar_layout"
            layout="@layout/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingBottom="@dimen/default_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_layout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/rl_users_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/rl_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="@dimen/search_margin_left"
                        android:layout_marginLeft="@dimen/search_margin_left"
                        android:layout_marginTop="@dimen/search_margin_top"
                        android:layout_marginEnd="@dimen/search_margin_right"
                        android:layout_marginRight="@dimen/search_margin_right"
                        android:layout_marginBottom="@dimen/search_margin_bottom"
                        android:background="@drawable/border"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/et_search"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/search_layout_height"
                            android:layout_weight="1"
                            android:background="@null"
                            android:ellipsize="end"
                            android:hint="@string/search_by_title"
                            android:imeOptions="actionSearch"
                            android:inputType="textAutoComplete"
                            android:maxLines="1"
                            android:padding="@dimen/search_edit_text_padding"
                            android:textCursorDrawable="@null" />

                        <ImageButton
                            android:id="@+id/btn_search"
                            android:layout_width="@dimen/search_image_btn_width"
                            android:layout_height="@dimen/search_layout_height"
                            android:background="@null"
                            android:contentDescription="@null"
                            android:src="@android:drawable/ic_menu_search" />
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_news_list"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_below="@+id/rl_search"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rl_search" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pb_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:visibility="visible"
        tools:visibility="visible">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_no_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_data"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="@dimen/no_data_text_size"
        android:textStyle="italic|bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
