...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_user_name"
                style="@style/Title_Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:textSize="24sp"
                android:textStyle="bold"
...
                    android:maxLines="1"
                    android:text="@string/location"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_margin"
                    android:maxLines="1"
                    android:textSize="16sp"
                    tools:text="@string/location_preview" />
...
