<resources>
    <string name="app_name">Ahmed Task</string>
    <string name="no_data">No Data</string>
    <string name="search_by_title">Search by title</string>
    <string name="search_error">there is no such title</string>
    <string name="news_error">there is no news</string>
    <string name="location_preview">Berlin</string>
    <string name="user_name_preview">this is the user name</string>
    <string name="news">News</string>
    <string name="no_internet">Please check your internet connection</string>
    <string name="network_error">Network error, could get data,please try again!</string>
    <string name="location">Location:</string>
    <string name="account_created">Account created:</string>
    <string name="account_updated">Account updated:</string>
    <string name="followers">Followers:</string>
    <string name="public_repositories">public repositories :</string>
    <string name="gists">public gists :</string>
    <string name="github_client">Github client</string>
</resources>
